@@ -26,6 +26,14 @@
             permission="zope2.View" />
     </configure>
 
+    <!-- collective.documentgenerator helper view for MeetingItem -->
+    <browser:page
+        for="Products.PloneMeeting.interfaces.IMeetingItem"
+        class=".browser.overrides.MLItemDocumentGenerationHelperView"
+        permission="zope2.View"
+        name="document_generation_helper_view"
+     />
+
     <!-- Override HistoryCommentViewable adapter for meetingadvice -->
     <adapter for="Products.PloneMeeting.content.advice.IMeetingAdvice"
              factory=".overrides.AdviceWfHistoryAdapter"
