@@ -82,10 +82,12 @@ margin-left: 0.2em;
     border: 2px solid cornflowerBlue;
 }
 
-.state-accepted, .label-state-accepted {
+.state-accepted, .label-state-accepted,
+.state-sent_to_council_emergency, .label-state-sent_to_council_emergency {
     color: green !important;
 }
-#plone-contentmenu-workflow .state-accepted {
+#plone-contentmenu-workflow .state-accepted,
+#plone-contentmenu-workflow .state-sent_to_council_emergency {
     border-radius: 0.5em 0.5em 0.5em 0.5em;
     background-color: green;
     padding: 0 0.5em;
